# Trader-Mini-App

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  seed.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: events.py  health.py  me.py  telegram.py
backend/app/jobs/: parse_forexfactory.py
backend/app/models/: __init__.py  economic_event.py  user_settings.py
backend/app/parser/: __init__.py  forexfactory.py  normalize.py  upsert.py
backend/app/schemas/: economic_event.py  user_settings.py
backend/app/services/: events_service.py  telegram_auth.py
backend/tests/fixtures/: forexfactory_calendar_sample.html
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  marketState.ts  mockEvents.ts  sessions.ts  styles.css  time.ts  timezones.ts  types.ts  vite-env.d.ts
