[project]
name = "trader-mini-backend"
version = "0.1.0"
description = "Backend service for Trader Mini App"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Trader Mini" }
]

dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.23.0",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic>=2.6",
  "pydantic-settings>=2.6",
  "python-dotenv>=1.0",
  "alembic>=1.11",
  "httpx>=0.24.0",
  "beautifulsoup4>=4.12",
  "playwright>=1.45"
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"
